# ME_766_HPC

./: .gitignore
MPI/matrix/: CMakeLists.txt  config.sh
MPI/matrix/.cache/clangd/index/: main.cpp.AC63491A187067B8.idx  matrix_operators.h.1D843AAB7700C4CC.idx
MPI/matrix/include/: main.cpp  matrix_operators.h
OpenMP/2d_laplace/: a.out
OpenMP/integration/: CMakeLists.txt  config.sh
OpenMP/integration/include/: enum_types.h  main.cpp  monte_carlo_method.h  random_number_generator.h  trapezoidal_integration.h
OpenMP/integration/install/include/: monte_carlo_method.h  trapezoidal_integration.h
OpenMP/matrix/: CMakeLists.txt  config.sh  profile.sh
OpenMP/matrix/include/: main.cpp  matrix_operators.h
OpenMP/matrix/install/include/: matrix_operators.h
OpenMP/matrix/results/: data_1.dot  data_1.txt
serial_code/integration/: CMakeLists.txt  config.sh
serial_code/integration/include/: main.cpp  monte_carlo_method.h  trapezoidal_integration.h
serial_code/integration/input/: input.json
serial_code/integration/install/include/: trapezoidal_integration.h
serial_code/matrix/: CMakeLists.txt
serial_code/matrix/include/: main.cpp  matrix_operators.h
serial_code/matrix/install/include/: matrix_operators.h
